# across-orchestrator

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  AGENT_LOOP_RFC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  across-orchestrator.product.json  llms.txt  package-lock.json  package.json  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: quality.yml  release-worker.yml  security.yml
docs/: across-agents-assistant-integration.md  across-ecosystem-plugin-runtime.md  hosting-platform-plugin-architecture.md  implementation-plan.md  parity-audit.md  product-architecture.md
examples/: demo-task.json
packaging/: build_worker_distribution.py  install_worker.py
packaging/relay/: Dockerfile  README.md
scripts/: check.sh
src/across_agents_assistant/: __init__.py  agent_ids.py  local_agent_health.py  native_agent_skills.py  paths.py  workspace_hygiene.py
src/across_orchestrator/: __init__.py  _remote_mcp_oauth_runtime.py  a2a_client.py  a2a_delegation.py  across_context.py  adapters.py  agent_card.py  agent_loop.py  agent_team.py  agent_team_readiness.py  agui_projection.py  app_grade.py  autopilot_contract.py  cancellation.py  cli.py  coordinator.py  engine.py  evidence.py  evidence_graph.py  external_agents.py  failures.py  findings.py  host_adapters.py  host_conformance.py  host_install.py  mcp.py  models.py  otel_export.py  paths.py  planning.py  plugin_manifest.py  protocol_gateway.py  redaction.py  relay.py  remote_mcp.py  run_contracts.py  runtime.py  sandbox.py  server.py  store.py  (+6 more)
tests/: test_a2a_client.py  test_adapters.py  test_agent_card.py  test_agent_loop_across_context.py  test_agent_loop_runtime.py  test_agent_loop_v2.py  test_agent_team_readiness.py  test_app_grade_runtime.py  test_autopilot_contract.py  test_cli.py  test_evidence_graph.py  test_evidence_receipt.py  test_external_agents.py  test_findings.py  test_frontier_interop.py  test_host_conformance.py  test_http.py  test_mature_engine.py  test_mcp.py  test_paths.py  test_planning.py  test_plugin_runtime.py  test_product_boundary.py  test_protocol_gateway.py  test_remote_mcp_server.py  test_run_contracts.py  test_runtime.py  test_sandbox.py  test_worker_control.py  test_worker_distribution.py
tests/parity/: test_contract_acceptance.py  test_contract_aggregation.py  test_contract_sanitization.py  test_contract_validator.py  test_delivery_contract.py  test_delivery_report.py  test_dispatcher.py  test_owner_agent.py  test_quality_benchmark.py  test_quality_gates.py  (+3 more)
(+41 files in other folders)
